Gutter spacing fix for alternate layouts.

--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -116,6 +116,9 @@ mark, ins {
 /* =Masonry Layout
 ----------------------------------------------- */
 
+.masonry .hentry {
+	margin-right:20px;
+}
 .masonry .entry-title a {
 	color: #fff;
 }
