--- a/scss/style.scss
+++ b/scss/style.scss
@@ -240,7 +240,7 @@ pre {
 .masonry .hentry {
 	float:left;
 	width:32%;
-	margin-right:20px;
+	margin-right:18px;
 }
 .masonry .hentry:nth-child(3) {
 	margin:0;
